Added pop up style to forms

--- a/templates/home/admin_home.html
+++ b/templates/home/admin_home.html
@@ -24,7 +24,7 @@
             <button onclick="editCategory()">Edit</button>
         </div>
 
-        <div id="add_category_form">
+        <div id="add_category_form" class="add_category_form">
 
         </div>
         
@@ -36,7 +36,7 @@
             <div id="edit_back_buttons">
                 
             </div>
-            <div id="add_item">
+            <div id="add_item" class="add_item">
                 <div id="add_item_form">
 
                 </div>
