--- a/templates/home/item_form.html
+++ b/templates/home/item_form.html
@@ -6,4 +6,5 @@
     {{ item_form.item_category }}
 
     <input type="submit" value="Next">
+    <button onclick="closeForm()">Cancel</button>
 </form>
