--- a/templates/home/stock_form.html
+++ b/templates/home/stock_form.html
@@ -2,4 +2,5 @@
     {% csrf_token %}
     {{ stock_form.item_total_quantity }}
     <input type="submit" value="Submit">
+    <button onclick="closeForm()">Cancel</button>
 </form>
