--- a/templates/home/category_form.html
+++ b/templates/home/category_form.html
@@ -2,4 +2,5 @@
     {% csrf_token %}
     {{ category_form.item_category }}
     <input type="submit" value="Submit">
+    <button onclick="closeCategoryForm()">Cancel</button>
 </form>
