--- a/templates/members/members.html
+++ b/templates/members/members.html
@@ -5,13 +5,29 @@
         <link rel="stylesheet" href="{% static 'members/memberstyle.css' %}">
         <title>MEMBERS</title>
     </head>
-    <h1>MEMBERS</h1>
     <body>
-        <button><a href="{% url 'admin_home' %}">Home</a></button>
-        <button><a href="{% url 'admin_recents' %}">Recents</a></button>
-        <button><a href="{% url 'admin_unreturned' %}">Unreturned</a></button>
-        <button><a href="{% url 'members' %}">Members</a></button>
-        <button><a href="{% url 'admin_userprofile' %}">Account</a></button>
-        <button><a href="{% url 'logout' %}">Logout</a></button>
+        <header>
+            <div class="logo left">
+                <img src="static/home/LSPU.png" alt="Left Logo">
+            </div>
+            <div class="search-bar">
+                <input type="text" class="search-input" placeholder="Search...">
+                <i class="fas fa-search"></i>
+            </div>
+            <div class="logo right">
+                <img src="static/home/CSS.png" alt="Right Logo">
+            </div> 
+        </header>
+        <div class="head"></div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+                <a href="{% url 'admin_home' %}" class="navbar-brand">Home</a>
+                <a href="{% url 'admin_recents' %}" class="navbar-brand">Recents</a>
+                <a href="{% url 'admin_unreturned' %}" class="navbar-brand">Unreturned</a>
+                <a href="{% url 'members' %}" class="navbar-brand">Members</a>
+                <a href="{% url 'admin_userprofile' %}" class="navbar-brand">Account</a>
+                <a href="{% url 'logout' %}" class="navbar-brand">Logout</a>
+            </div>
+        </nav>
     </body>
 </html>
