--- a/templates/home/admin_home.html
+++ b/templates/home/admin_home.html
@@ -28,6 +28,9 @@
 
         </div>
         
+        <div id="delete_confirmation" class="delete_confirmation">
+
+        </div>
         
         <div id="category_item" class="category_div">
             <div id="item_list">
@@ -46,6 +49,7 @@
                 <div id="success_popup">
 
                 </div>
+                
             </div>
             <h1>{{ current_category }}</h1>
             {% for item in cleaning_inventory %}
