--- a/templates/unreturned/admin_unreturned.html
+++ b/templates/unreturned/admin_unreturned.html
@@ -2,20 +2,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="{% static 'unreturned/unreturnedstyle.css' %}">
+        <link rel="stylesheet" href="{% static 'members/memberstyle.css' %}">
         <title>ADMIN UNRETURNED</title>
     </head>
     <body>
         <header>
             <div class="logo left">
-                <img src="static/home/LSPU.png" alt="Left Logo">
+                <img src="static/unreturned/LSPU.png" alt="Left Logo">
             </div>
             <div class="search-bar">
                 <input type="text" class="search-input" placeholder="Search...">
                 <i class="fas fa-search"></i>
             </div>
             <div class="logo right">
-                <img src="static/home/CSS.png" alt="Right Logo">
+                <img src="static/unreturned/CSS.png" alt="Right Logo">
             </div> 
         </header>
         <div class="head"></div>
