--- a/templates/members/members.html
+++ b/templates/members/members.html
@@ -8,14 +8,14 @@
     <body>
         <header>
             <div class="logo left">
-                <img src="static/home/LSPU.png" alt="Left Logo">
+                <img src="static/unreturned/LSPU.png" alt="Left Logo">
             </div>
             <div class="search-bar">
                 <input type="text" class="search-input" placeholder="Search...">
                 <i class="fas fa-search"></i>
             </div>
             <div class="logo right">
-                <img src="static/home/CSS.png" alt="Right Logo">
+                <img src="static/unreturned/CSS.png" alt="Right Logo">
             </div> 
         </header>
         <div class="head"></div>
