--- a/templates/recents/recents.html
+++ b/templates/recents/recents.html
@@ -43,9 +43,9 @@
                     </div>
                 </div>
                 <div id="bottom">
-                    <!-- <div id="btn_con">
-                        <button id="return_btn" class="rounded_corners">Return</button>
-                    </div> -->
+                    <div id="btn_con">
+                        <!-- <button id="return_btn" class="rounded_corners">Return</button> -->
+                    </div>
                 </div>
 
             </div>
