--- a/templates/unreturned/unreturned.html
+++ b/templates/unreturned/unreturned.html
@@ -46,7 +46,7 @@
                 <div id="bottom">
                     <div id="btn_con">
                         <!-- <button id="return_btn" class="rounded_corners">Return</button> -->
-                        <a href="{% url 'return_item' item.id %}">Return</a>
+                        <a href="{% url 'return_item' item.id item.item_borrowed.item_stock.item_current_quantity %}">Return</a>
                     </div>
                 </div>
 
