--- a/templates/home/category_form.html
+++ b/templates/home/category_form.html
@@ -1,5 +1,6 @@
 <form action="/save_category_form/" id="categoryFormId" method="post">
     {% csrf_token %}
+    <p>Category name:</p>
     {{ category_form.item_category }}
     <input type="submit" value="Submit">
     <button onclick="closeCategoryForm()">Cancel</button>
