--- a/templates/home/stock_form.html
+++ b/templates/home/stock_form.html
@@ -1,5 +1,6 @@
 <form action="/save_stock_form/" id="stockFormId" method="post">
     {% csrf_token %}
+    <p>Total item stock:</p>
     {{ stock_form.item_total_quantity }}
     <input type="submit" value="Submit">
     <button onclick="closeForm()">Cancel</button>
