--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -940,6 +940,77 @@ body {
     flex: 1;
     margin-top: 50px;
   }
+   /* bagong code*/
+
+  /*home categories*/
+  .categories {
+    display: flex;
+    justify-content: space-around;
+    margin: 20px 0;
+    font-family: Arial, Helvetica, sans-serif;
+   
+  }
+
+  .category_button {
+    padding: 10px;
+    font-size: medium;
+    font-weight: bold;
+    background-color: white;
+    color: black;
+    border: 4px solid #7A1A22;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+
+  .category_button:hover {
+    background-color: #ff9f5f;
+  }
+  /*edit button*/
+  #edit_category_buttons {
+    display: flex;
+    justify-content: flex-end;
+    margin: 20px 0;
+  }
+
+  #edit_category_buttons button {
+    padding: 10px;
+    margin-right: 30px;
+    background-color:orangered ;
+    color: black;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+
+  #edit_category_buttons button:hover {
+    background-color: #d1e0ea;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   /* Media queries for responsiveness */
   @media screen and (max-width: 768px) {
     header {
