--- a/templates/home/admin_home.html
+++ b/templates/home/admin_home.html
@@ -38,7 +38,7 @@
                         <div id="edit_category_buttons">
                             <button onclick="editCategory()">Edit</button>
                         </div>
-                        <div class="categories">
+                        <div class="categories" id="category_container">
                             {% for category in categories %}
                             <button onclick="showItem('{{ category }}')" class="category_button">{{ category }}</button>
                             {% endfor %}
