--- a/templates/recents/recents.html
+++ b/templates/recents/recents.html
@@ -6,6 +6,8 @@
         <title>RECENTS</title>
     </head>
 
+    
+
     <style>
         * {
             font-family: Arial, Helvetica, sans-serif; background-color: gray;
@@ -85,6 +87,11 @@
     <body>
         <h1 id="mema_title">Page ng RECENTS to boy. HAHA</h1>
 
+        <form method="GET" action="{% url 'search_items' %}">
+            <input type="text" name="q" value="{{ query }}" placeholder="Search for name/id/category">
+            <button type="submit">Search</button>
+          </form>
+
         <div id="nav_btn" class="rounded_corners">
             <button><a href="{% url 'home' %}">Home</a></button>
             <button><a href="{% url 'recents' %}" class="active_tab">Recents</a></button>
@@ -145,6 +152,8 @@
             <!-- {% endfor %} -->
             <!-- template for the items -->
         </div>
-
+        
     </body>
 </html>
+
+{% include 'home/result_list.html' %}
