--- a/templates/home/guest_home.html
+++ b/templates/home/guest_home.html
@@ -81,6 +81,6 @@
 
                     
        
-        <script defer src="{% static 'home/homescript.js' %}"></script>
+        <script defer src="{% static 'home/homeguestscript.js' %}"></script>
     </body>
 </html>
