--- a/templates/home/admin_home.html
+++ b/templates/home/admin_home.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         {% load static %}
-        <link rel="stylesheet" href="{% static 'home/homestyle.css' %}">
+        <link rel="stylesheet" href="{% static 'home/homeadminstyle.css' %}">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
         <title>ADMIN HOME</title>
     <body>
