--- a/templates/home/guest_home.html
+++ b/templates/home/guest_home.html
@@ -65,17 +65,18 @@
                 {% endfor %}
                 <div class="item_information" id="item_information">
                     <div class="item_header" id="item_header">
-
-                        <button data-close-button class="close_button">&times;</button>                          
+                       
                     </div>
 
-                    <div class="item_body" id="item_body">
+                    <div class="borrow-form">
+                        <div class="item_body" id="item_body">
+                            <button data-close-button class="close_button">&times;</button>      
 
-                    </div>
-                    <div class="item_form" id="item_form">
+                        </div>
+                        <div class="item_form" id="item_form">
 
+                        </div>
                     </div>
-                    
                 </div>
                 
             </div>
