--- a/templates/home/borrow_form.html
+++ b/templates/home/borrow_form.html
@@ -1,12 +1,18 @@
 <form action="/save_borrow_form/" id="borrowFormId" method="post">
     {% csrf_token %}
-    <p>Quantity to be borrowed:</p>
-    {{ borrow_form.item_quantity }}
-    <p>Date when you want to borrow the item:</p>
-    {{ borrow_form.item_date_borrowed }}
-    <p>Date when you want to return the item(can be blank):</p>
-    {{ borrow_form.item_date_returned }}
-    {{ borrow_form.item_stock }}
+    <div class="item-form">
+        <div class="borrow-date">
+        <p>Borrowing Date:</p>
+        {{ borrow_form.item_date_borrowed }}
+        <p>Return Date(can be blank):</p>
+        {{ borrow_form.item_date_returned }}
+        {{ borrow_form.item_stock }}
+        </div>
+        <div class="borrow-quantity">
+        <p>Quantity:</p>
+        {{ borrow_form.item_quantity }}
+        <input class="borrow-button" type="submit" value="Submit">
+        </div>
+    </div>
 
-    <input type="submit" value="Submit">
 </form>
