--- a/static/home/homeadminstyle.css
+++ b/static/home/homeadminstyle.css
@@ -964,7 +964,7 @@ body {
   }
 
   .category_button:hover {
-    background-color: #ff9f5f;
+    background-color: #f36d34;
   }
   /*edit button*/
   #edit_category_buttons {
@@ -977,16 +977,18 @@ body {
     padding: 10px;
     margin-right: 30px;
     background-color:orangered ;
-    color: black;
+    color: white;
     font-weight: bold;
     border: none;
+    border: 2px solid orangered;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
   }
 
   #edit_category_buttons button:hover {
-    background-color: #d1e0ea;
+    color: black;
+    background-color: white;
   }
 
   /*add category button sa edit*/
@@ -1047,8 +1049,406 @@ body {
 #successMessage button:hover {
   background-color: #2980b9;
 }
+/*remove */
+button {
+  background-color: #fc3f00;
+  margin-top: 5px;
+  color: #fff;
+  border: 2px solid #fc3f00;
+  padding: 5px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  color: black;
+  background-color: #fff;
+}
+
+/* Icon styles */
+.fa-trash {
+  margin-right: 5px;
+}
+
+/* Text styles */
+button p {
+  margin: 0;
+}
+
+/* Center text vertically and horizontally */
+button p {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Remove underline from anchor text */
+button p:hover {
+  text-decoration: none;
+}
+/*delete item*/
+.overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+/* Pop-up form styles */
+.confirmation-pop-up {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  max-width: 400px; /* Adjust as needed */
+  width: 80%;
+  text-align: center;
+}
+
+/* Text styles */
+.confirmation-pop-up p {
+  margin-bottom: 20px;
+}
+
+/* Button styles */
+.delete_confirm, .delete_denied, .back_button {
+  padding: 10px;
+  margin: 5px;
+  cursor: pointer;
+  border: none;
+  width: 100px;
+}
+
+.delete_confirm {
+  background-color: #e74c3c;
+  color: #fff;
+}
+
+.delete_denied, .back_button {
+  background-color: #3498db;
+  color: #fff;
+}
 
 
+
+#item_header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #3498db;
+  color: #fff;
+  padding: 10px;
+}
+
+#item_header img {
+  margin-right: 10px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+
+#item_header p {
+  margin: 0;
+}
+
+/* Style for the close button */
+.close_button {
+  background: none;
+  border: none;
+  font-size: 20px;
+  color: #fff;
+  cursor: pointer;
+}
+
+/*borrow popup*/
+/*table quantity*/
+#item_body table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 10px;
+}
+
+#item_body td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+
+#item_body tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+#item_body tr:hover {
+  background-color: #ddd;
+}
+
+/* Style for the borrow form */
+#item_form {
+  padding: auto;
+  margin-top: 20px;
+}
+#borrowFormId {
+  display: flex;
+  flex-direction: column;
+  max-width: 400px;
+  margin: 0 auto;
+}
+
+#borrowFormId label {
+  margin-bottom: 15px;
+}
+
+#borrowFormId input[type="text"],
+#borrowFormId input[type="number"] {
+  padding: 10px;
+  margin-bottom: 10px;
+  box-sizing: border-box;
+}
+
+#borrowFormId button {
+  padding: 10px;
+  background-color: #3498db;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+/*additem*/
+.form-popup {
+  display: block; /* Change to 'none' if you want it hidden by default */
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fefefe;
+  padding: 20px;
+  border: 1px solid #ccc;
+  z-index: 999;
+  max-width: 400px;
+  width: 80%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+.form-group {
+  margin-bottom: 15px;
+}
+
+/* Style for input containers */
+.input-container {
+  display: flex;
+  align-items: center;
+}
+
+/* Optional: Add some spacing between label and input */
+.input-container p {
+  margin-right: 10px;
+}
+
+/* Optional: Style the input fields */
+.input-container input
+{
+  padding: 8px;
+  width: 100%;
+  box-sizing: border-box;
+}
+.input-container select {
+  margin-top: 10px;
+  padding: 5px;
+  width: 50%;
+  box-sizing: border-box;
+}
+/* Optional: Style the textarea */
+.input-container textarea {
+  padding: 8px;
+  width: 100%;
+  box-sizing: border-box;
+  resize: vertical; /* Allow vertical resizing of textarea */
+}
+/* Style for the submit button */
+input[type="submit"] {
+  padding: 10px;
+  background-color: orangered;
+  color: #fff;
+  border: 2px solid orangered;
+  cursor: pointer;
+}
+input[type="submit"]:hover{
+  background-color: white;
+  color: black;
+}
+/* Style for the cancel button */
+.additem-button {
+  padding: 10px;
+  background-color: white;
+  color: black;
+  border: 2px solid orangered;
+  cursor: pointer;
+  margin-left: 10px; /* Optional: Add some space between buttons */
+}
+.additem-button:hover{
+  background-color: orangered;
+  color: white;
+}
+
+/* Optional: Hover effects */
+input[type="submit"]:hover,
+button:hover {
+  opacity: 0.8;
+}
+/*next popup*/
+.form-next {
+    display: block; /* Change to 'none' if you want it hidden by default */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fefefe;
+    padding: 20px;
+    border: 1px solid #ccc;
+    z-index: 999;
+    max-width: 400px;
+    width: 80%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+/* Optional: Style for the cancel button */
+#stockFormPopup button {
+    margin-top: 10px;
+    padding: 10px;
+    background-color: white;
+    color: black;
+    border: 2px solid orangered;
+    cursor: pointer;
+}
+#stockFormPopup button:hover{
+  margin-top: 10px;
+  padding: 10px;
+  background-color: #e74c3c;
+  color: white;
+}
+/*category*/
+/* Style for the form popup container */
+        .form-popup {
+            display: block; /* Set to 'block' to make the form open by default */
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: #fefefe;
+            padding: 20px;
+            border: 1px solid #ccc;
+            z-index: 999;
+            max-width: 400px;
+            width: 80%;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        }
+
+        /* Style for the "Submit" button */
+        .form-popup input[type="submit"] {
+            padding: 10px;
+            background-color: #3498db;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+        }
+
+        /* Style for the "Cancel" button */
+        .form-popup button {
+            margin-top: 10px;
+            padding: 10px;
+            background-color: #e74c3c;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+        }
+
+/* Add this to your existing styles or in a separate stylesheet */
+.success-popup {
+  background-color: white; /* Green background */
+  color: black;
+  text-align: center;
+  padding: 15px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+}
+
+.success-popup p {
+  margin: 0;
+  font-size: 16px;
+}
+
+.success-popup button {
+  background-color: orangered; /* Dark green button color */
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
+  font-size: 14px;
+}
+
+.success-popup button:hover {
+  background-color: white;
+  color: black
+}
+        
+/*delete category*/
+.confirmation-popup-container {
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent gray background */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+.confirmation-popup {
+  background-color: white;
+  color: black;
+  text-align: center;
+  padding: 15px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+
+}
+
+.confirmation-popup p {
+  margin: 0;
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+.confirmation-popup button {
+  color: white;
+  padding: 10px 20px;
+  border: 2px solid orangered;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
+  font-size: 14px;
+}
+
+.confirmation-popup button:hover {
+  background-color: white; /* Slightly lighter color on hover */
+  color: black;
+}
 
 
 
@@ -1135,4 +1535,54 @@ body {
       margin-right: 0;
       margin-bottom: 10px; /* Add spacing between buttons in smaller screens */
     }
+    /*delete item*/
+    .confirmation-pop-up {
+      max-width: 300px; /* Adjust for smaller screens */
   }
+     
+    .confirmation-pop-up {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+    /*borrow form table*/
+    #item_body td {
+      display: block;
+      width: 100%;
+      box-sizing: border-box;
+      border: none;
+      border-bottom: 1px solid #ddd;
+      padding: 8px;
+      text-align: left;
+    }
+  
+    #item_body tr {
+      display: block;
+      margin-bottom: 10px;
+    }
+  
+    #item_body tr:last-child {
+      margin-bottom: 0;
+    }
+  
+    #item_body td:before {
+      content: attr(data-label);
+      font-weight: bold;
+      display: inline-block;
+      width: 50%;
+      box-sizing: border-box;
+    }
+    /*borrow form*/
+    #borrowFormId {
+      max-width: 100%;
+    }
+    /*item form*/
+    .form-popup {
+      width: 90%;
+  }
+}
+
+
+  
+
