--- a/templates/home/admin_home.html
+++ b/templates/home/admin_home.html
@@ -75,7 +75,7 @@
                         </div>
                 </div>
 
-                <!-- Items -->
+                <!-- Items 
                 <div id="itemlist" class="form" style="display: none;">
                     <h1>Items</h1>
                     <form id="removeItemsForm" onsubmit="return confirmRemoveItems()">
@@ -101,7 +101,7 @@
                     </div>
                 </div>
 
-              <!-- Add Item Form (Modal)-->
+               Add Item Form (Modal)
         <div id="addItemForm" class="modal">
             <div class="item-forms">
                 <form action="/action_page.php">
@@ -123,7 +123,7 @@
 
                 
             
-                <!-- form pagclick ng orange add icon -->
+              form pagclick ng orange add icon 
                 <div id="modal" class="modal">
                     <div class="modal-content">
                             <div class="left-preview">
@@ -147,26 +147,26 @@
 
                 <div id="recentForm" class="form" style="display: none;">
                     <h1>Recent Form</h1>
-                    <!-- Your recent form content goes here -->
+                   Your recent form content goes here 
                 </div>
 
                 <div id="unreturnedForm" class="form" style="display: none;">
                     <h1>Unreturned Form</h1>
-                    <!-- Your unreturned form content goes here -->
+                     Your unreturned form content goes here 
                 </div>
 
                 <div id="membersForm" class="form" style="display: none;">
                     <h1>Members Form</h1>
-                    <!-- Your members form content goes here -->
+                    Your members form content goes here 
                 </div>
 
                 <div id="accountForm" class="form" style="display: none;">
                     <h1>Account Form</h1>
-                    <!-- Your account form content goes here -->
+                    Your account form content goes here 
                 </div>
 
                 
-            </head>
+            </head> -->
 
      <!-- start ng code ni westin -->
 
