--- a/templates/home/admin_home.html
+++ b/templates/home/admin_home.html
@@ -36,7 +36,8 @@
                 
                     <div class="item">
                         <div id="edit_category_buttons">
-                            <button onclick="editCategory()">Edit</button>
+                            <h1 class="h1item">Categories</h1>
+                            <button onclick="editCategory()"><i class="fa fa-edit"></i></button>
                         </div>
                         <div class="categories" id="category_container">
                             {% for category in categories %}
