--- a/static/home/homeadminstyle.css
+++ b/static/home/homeadminstyle.css
@@ -975,7 +975,7 @@ body {
 
   #edit_category_buttons button {
     padding: 10px;
-    margin-right: 30px;
+    margin-right:30px;
     background-color:orangered ;
     color: white;
     font-weight: bold;
@@ -989,6 +989,10 @@ body {
   #edit_category_buttons button:hover {
     color: black;
     background-color: white;
+  }
+  .h1item{
+    margin-right: 10px;
+    
   }
 
   /*add category button sa edit*/
